--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -13,8 +13,7 @@
     </ion-toolbar>
   </ion-header>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-button target="_blank" href="pagos24://app-authorization/secret0@gmail.com/deeplinktest">
+    Go to pagos 24
+  </ion-button>
 </ion-content>
