--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -13,7 +13,7 @@
     </ion-toolbar>
   </ion-header>
 
-  <ion-button target="_blank" href="pagos24://app-authorization?email=secret0@gmail.com&redirectUrlScheme=deeplinkstest">
+  <ion-button target="_blank" href="pagos24://app-authorization?email=secret0@gmail.com&redirectUrlScheme=deeplinkstest://">
     Go to pagos 24 android
   </ion-button>
 
