--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -13,11 +13,11 @@
     </ion-toolbar>
   </ion-header>
 
-  <ion-button target="_blank" href="pagos24://app-authorization?email=secret0@gmail.com&redirectUrlScheme=deeplinkstest://">
+  <ion-button target="_blank" href="pagos24://app-authorization?email=secret0@gmail.com&redirectUrlScheme=deeplinktest://home">
     Go to pagos 24 android
   </ion-button>
 
-  <a target="_blank" href="https://pagos24.com/app-authorization?email=secret0@gmail.com&redirectUrlScheme=https://deeplinkstest.com">
+  <a target="_blank" href="https://pagos24.com/app-authorization?email=secret0@gmail.com&redirectUrlScheme=https://deeplinktest.com">
     Go to pagos 24 ios
   </a>
 </ion-content>
